31 step1 tstates